# fopforce

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
include/: Display.h  RandomNumberGenerator.h  cell.h  grid.h  molecule.h  settings.h
src/: Display.cpp  RandomNumberGenerator.cpp  cell.cpp  grid.cpp  main.cpp  molecule.cpp  settings.cpp
